@@ -1,11 +1,13 @@
 gem2deb (0.9.2) UNRELEASED; urgency=medium
 
   * gem2deb-test-runner: add '.' to $LOAD_PATH with --autopkgtest
-  * Gem2Deb::TestRunner: remove innocuous constructor
   * dh-make-ruby won't create debian/tests/control anymore since autopkgtest
     will now auto-detect Ruby packages and assume an implicit tests
     definition. debian/tests/control.ex will be created instead, with comments
     explaining to either modify it and rename to control, or delete it.
+  * dh-make-ruby: when test/ or spec/ exists, create debian/ruby-tests.rake
+    with the appropriate rake invocation to run the tests, instead of being
+    insecure and creating files all commented out.
 
  -- Antonio Terceiro <terceiro@debian.org>  Tue, 02 Sep 2014 20:10:55 -0300
 
